@@ -1,3 +1,8 @@
+2013-04-10  Joel Brobecker  <brobecker@adacore.com>
+
+	* solib.c (solib_map_sections): Remove code overwriting
+	SO->SO_NAME with the bfd's filename.
+
 2013-04-10  Pedro Alves  <palves@redhat.com>
 
 	* cli/cli-decode.c (integer_unlimited_completer): New function.
